# z_audio_kit

./: CI_FAILURE_DIAGNOSIS.md  CI_SETUP_SUMMARY.md  CMakeLists.txt  Kconfig  README.md  west.yml
.github/: CI_DISK_SPACE_FIX.md  CI_README.md  PULL_REQUEST_TEMPLATE.md  STATUS_BADGES.md  TROUBLESHOOTING.md
.github/workflows/: build-test-fixed.yml.disabled  build-test-simple.yml.disabled  build-test.yml  build-test.yml.disabled  quick-check.yml.disabled
docs/: ARCHITECTURE_COMPARISON.md  DATA_FLOW_V2.md  LARGE_WINDOW_NODES.md  PROTOTYPE_SUMMARY.md  SEQUENTIAL_ARCHITECTURE.md  SPECTRUM_ANALYZER_CMSIS.md
examples/: example_channel_strip.c  example_spectrum_analyzer.c  example_spectrum_analyzer_advanced.c  example_standalone_nodes.c
include/: audio_fw.h  audio_fw_v2.h  channel_strip.h
samples/basic_sine/: CMakeLists.txt  Kconfig  prj.conf
samples/basic_sine/boards/: qemu_cortex_m3.conf
samples/basic_sine/src/: main.c
samples/metering_console/: CMakeLists.txt  prj.conf
src/: channel_strip.c  core.c
src/nodes/: node_analyzer.c  node_log_sink.c  node_sine.c  node_sine_v2.c  node_spectrum_analyzer.c  node_spectrum_analyzer_v2.c  node_splitter.c  node_volume.c  node_volume_v2.c
tests/analyzer_logic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cow_integrity/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cow_integrity/src/: main.c
tests/memory_check/: CMakeLists.txt  prj.conf  testcase.yaml
tests/memory_check/boards/: qemu_cortex_m3.conf
tests/memory_check/src/: main.c
tests/node_sine/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/: module.yml
(+9 files in other folders)
